# GSRD

./: .gitignore  README.md  pyproject.toml
artifacts/cache/datasets/: dataset_manifest.json
artifacts/cache/vocabs/: toy_det_vocabs.json
artifacts/eccv_grade_small/outputs/: compute_summary.json
artifacts/local_bigger_v2/outputs/: compute_summary.json
artifacts/local_bigger_v3/outputs/: compute_summary.json
artifacts/local_bigger_v4/outputs/: compute_summary.json
artifacts/local_bigger_v5/outputs/: compute_summary.json
artifacts/local_bigger_v6/outputs/: compute_summary.json
artifacts/local_bigger_v7/outputs/: compute_summary.json
artifacts/local_bigger_v8/outputs/: compute_summary.json
artifacts/local_small_test/outputs/: compute_summary.json
artifacts/outputs/: compute_summary.json
artifacts/outputs/eval/: shift_interaction_summary.csv
artifacts/outputs/report/: final_report.md  report_manifest.json
artifacts/smoke_run/outputs/: compute_summary.json
configs/: default.yaml  engaging_cluster.yaml  engaging_low_compute.yaml  engaging_phase_a_fast.yaml  local_bigger.yaml  smoke.yaml
data/local_bigger_v4/toy/: domains.json
data/local_bigger_v5/toy/: annotations.json
scripts/slurm/: engaging_inference_shard.sbatch  engaging_postprocess.sbatch  engaging_prepare.sbatch  merge_and_eval.sbatch  run_inference_array.sbatch  submit_engaging_full_2xh200.sh
src/gsrd/: __init__.py  cli.py  constants.py
tests/: test_eval_statistics.py  test_inference_cache.py  test_risk_control.py  test_risk_matching.py  test_vocab_generation.py
(+619 files in other folders)
